@@ -19,10 +19,10 @@ PluginFxCallback Plugin::_callback;
 
 Plugin::Plugin(int index)
 {
-	macIndex = index;
+	_macIndex = index;
 	_type = MACH_PLUGIN;
 	_mode = MACHMODE_PLUGIN;
-	sprintf(_editName, "%.2X:Plugin",macIndex);
+	sprintf(_editName, "Plugin");
 	_dll = NULL;
 	_pInterface = NULL;
 	_psAuthor=NULL;
@@ -69,7 +69,8 @@ bool Plugin::Instance(char* psFileName)
 
 	strncpy(_psShortName,_pInfo->ShortName,15);
 	_psShortName[15]='\0';
-	sprintf(_editName, "%.2X:%s",macIndex,_pInfo->ShortName);
+	strncpy(_editName, _pInfo->ShortName,31);
+	_editName[31]='\0';
 
 	_psAuthor = new char[strlen(_pInfo->Author)+1];
 	strcpy(_psAuthor,_pInfo->Author);
